--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "happy-dom": "^12.10.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
