--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "happy-dom": "^12.10.3",
